# aws-get-creds

./: .gitignore  README.md  application.py  aws-get-creds.py  aws_get_creds.py  config.json.dist  global-tool.md  improvement.md  pyproject.toml  requirements.txt  test_application.py
